2014-09-21  Araki Ken  <arakiken@users.sf.net>

	* x_display_x68kgrf.c: _disp.height is replaced by _display.height to fix
	  segv in x68k_tvram_set_wall_picture().

	* ml_pty_ssh.c: libssh2_session_set_timeout(0) is called at the end of ssh_connect().

2014-09-20  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: x_window_bell() supports BEL_VISUAL.

	* xlib/x_window.c, fb/x_window.c:
	  x_window_blank() doesn't blank RIGHT_MARGIN and BOTTOM_MARGIN.

	* ml_pty_ssh.c: libssh2_session_set_timeout(10000) => libssh2_session_set_timeout(30000)

2014-09-18  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.[ch], ml_pty_intern.h, ml_pty_ssh.c, ml_pty_pipewin32.c, ml_pty_unix.c,
	  ml_term.[ch], ml_term_manager.c, x_screen_manager.c:
	  width_pix and height_pix arguments are added to the functions opening pty.

	* ml_term.[ch]: ml_term_set_winsize() is removed.

	* ml_pty_ssh.c: libssh2_session_set_timeout(10000).

2014-09-14  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in: "./configure;make install" executes "make all" automatically
	  before "make install".

	* ml_term_manager.c: Don't restart mlterm in segv twice or more times
	  if auto_restart=true.

2014-09-14  Araki Ken  <arakiken@users.sf.net>

	* ml_term_manager.c: Fix compiling error.

2014-09-13  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.[ch], ml_pty_intern.h, ml_pty_unix.c, ml_term.[ch], ml_vt100_parser.c,
	  ml_screen.c, ml_screen_manager.c, ml_pty_ssh.c, MLTermPty.c, vte.c:
	  Window width and height by pixel are set to struct winsize::ws_{x|y}pixel.

2014-09-10  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: ml_term_reset_pending_sequence() is called in pressing Pause key
	  instead of ESC key.

2014-09-07  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: xterm_show_picture() is renamed to x_term_show_sixel()
	  and char_index, row and scrollable arguments are removed.

	* ml_vt100_parser.[ch]:
	  - ml_xterm_event_listener_t::show_picture is renamed to